force-app/main/default/objects/EmailLog__c/EmailLog__c.object-meta.xml
<CustomObject>
    <description>用於紀錄B2B電子郵件寄送紀錄以及連結有效性</description>
    <label>Email Log</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Email Logs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>