force-app/main/default/objects/EmailLog__c/fields/Body__c.field-meta.xml
<CustomField>
    <fullName>Body__c</fullName>
    <description>內容</description>
    <inlineHelpText>內容</inlineHelpText>
    <label>Body</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>