force-app/main/default/objects/EmailLog__c/fields/Expire__c.field-meta.xml
<CustomField>
    <fullName>Expire__c</fullName>
    <description>期限到期URL將會失效</description>
    <formula>NOW()&gt;Expire_Date__c</formula>
    <inlineHelpText>期限到期URL將會失效</inlineHelpText>
    <label>Expire</label>
    <type>Checkbox</type>
</CustomField>