force-app/main/default/objects/EmailLog__c/fields/Expire_Date__c.field-meta.xml
<CustomField>
    <fullName>Expire_Date__c</fullName>
    <description>連結時效</description>
    <inlineHelpText>連結時效</inlineHelpText>
    <label>Expire Date</label>
    <type>DateTime</type>
</CustomField>