force-app/main/default/objects/EmailLog__c/fields/Link__c.field-meta.xml
<CustomField>
    <fullName>Link__c</fullName>
    <description>連結</description>
    <inlineHelpText>連結</inlineHelpText>
    <label>Link</label>
    <type>Url</type>
</CustomField>