force-app/main/default/objects/EmailLog__c/fields/Receiver__c.field-meta.xml
<CustomField>
    <fullName>Receiver__c</fullName>
    <description>收件者</description>
    <inlineHelpText>收件者</inlineHelpText>
    <label>Receiver</label>
    <type>Email</type>
</CustomField>