force-app/main/default/objects/EmailLog__c/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <label>User</label>
    <referenceTo>UserManagement__c</referenceTo>
    <relationshipLabel>Email Logs</relationshipLabel>
    <relationshipName>EmailLogs</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>