force-app/main/default/objects/EmailLog__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Expire_Date__c</columns>
    <columns>Status__c</columns>
    <columns>Subject__c</columns>
    <columns>Receiver__c</columns>
    <columns>Link__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>